# geonames-tagger

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
geonames_tagger/: __init__.py  cli.py  generate.py  settings.py  tagger.py  util.py
tests/: test_locationtagger.py
tests/fixtures/: places.csv  places.tsv
